--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -69,8 +69,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2015;$(SolutionDir)Dependencies\GLEW\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\OpenAL\include;$(SolutionDir)Dependencies\Gorilla\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2015;$(SolutionDir)Dependencies\GLEW\lib;$(SolutionDir)Dependencies\OpenAL\libs\Win32;$(SolutionDir)Dependencies\Gorilla\bin\win32\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(IncludePath)</IncludePath>
@@ -85,7 +85,7 @@
       <PreprocessorDefinitions>GLEW_STATIC;WIN32;_LIB;_CRT_NONSTDC_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>freetype271.lib;glfw3.lib;glew32s.lib;opengl32.lib;FreeImage.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype271.lib;glfw3.lib;glew32s.lib;opengl32.lib;FreeImage.lib;OpenAL32.lib;gorillaD.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -125,22 +125,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ext\freetype-gl_v2\distance-field.c" />
-    <ClCompile Include="ext\freetype-gl_v2\edtaa3func.c" />
-    <ClCompile Include="ext\freetype-gl_v2\platform.c" />
-    <ClCompile Include="ext\freetype-gl_v2\texture-atlas.c" />
-    <ClCompile Include="ext\freetype-gl_v2\texture-font.c" />
-    <ClCompile Include="ext\freetype-gl_v2\utf8-utils.c" />
-    <ClCompile Include="ext\freetype-gl_v2\vector.c" />
+    <ClCompile Include="ext\freetype-gl\distance-field.c" />
+    <ClCompile Include="ext\freetype-gl\edtaa3func.c" />
+    <ClCompile Include="ext\freetype-gl\platform.c" />
+    <ClCompile Include="ext\freetype-gl\texture-atlas.c" />
+    <ClCompile Include="ext\freetype-gl\texture-font.c" />
+    <ClCompile Include="ext\freetype-gl\utf8-utils.c" />
+    <ClCompile Include="ext\freetype-gl\vector.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\audio\sound.cpp" />
+    <ClCompile Include="src\audio\sound_manager.cpp" />
     <ClCompile Include="src\game\character.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
-    <ClCompile Include="src\game\inventory\inventory.cpp" />
-    <ClCompile Include="src\game\inventory\stats.cpp" />
     <ClCompile Include="src\graphics\batchrenderer2d.cpp" />
     <ClCompile Include="src\graphics\buffers\buffer.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexarray.cpp" />
+    <ClCompile Include="src\graphics\font.cpp" />
+    <ClCompile Include="src\graphics\font_manager.cpp" />
     <ClCompile Include="src\graphics\label.cpp" />
     <ClCompile Include="src\graphics\layers\group.cpp" />
     <ClCompile Include="src\graphics\layers\layer.cpp" />
@@ -166,30 +168,34 @@
     <ClCompile Include="src\physics\collisionable.cpp" />
     <ClCompile Include="src\physics\foothold.cpp" />
     <ClCompile Include="src\save\serializer.cpp" />
+    <ClCompile Include="src\UI\stats.cpp" />
+    <ClCompile Include="src\UI\ui_manager.cpp" />
     <ClCompile Include="src\utils\timer.cpp" />
     <ClCompile Include="src\view\camera.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ext\freetype-gl_v2\distance-field.h" />
-    <ClInclude Include="ext\freetype-gl_v2\edtaa3func.h" />
-    <ClInclude Include="ext\freetype-gl_v2\freetype-gl.h" />
-    <ClInclude Include="ext\freetype-gl_v2\opengl.h" />
-    <ClInclude Include="ext\freetype-gl_v2\platform.h" />
-    <ClInclude Include="ext\freetype-gl_v2\texture-atlas.h" />
-    <ClInclude Include="ext\freetype-gl_v2\texture-font.h" />
-    <ClInclude Include="ext\freetype-gl_v2\utf8-utils.h" />
-    <ClInclude Include="ext\freetype-gl_v2\vec234.h" />
-    <ClInclude Include="ext\freetype-gl_v2\vector.h" />
+    <ClInclude Include="ext\freetype-gl\distance-field.h" />
+    <ClInclude Include="ext\freetype-gl\edtaa3func.h" />
+    <ClInclude Include="ext\freetype-gl\freetype-gl.h" />
+    <ClInclude Include="ext\freetype-gl\opengl.h" />
+    <ClInclude Include="ext\freetype-gl\platform.h" />
+    <ClInclude Include="ext\freetype-gl\texture-atlas.h" />
+    <ClInclude Include="ext\freetype-gl\texture-font.h" />
+    <ClInclude Include="ext\freetype-gl\utf8-utils.h" />
+    <ClInclude Include="ext\freetype-gl\vec234.h" />
+    <ClInclude Include="ext\freetype-gl\vector.h" />
+    <ClInclude Include="src\audio\sound.h" />
+    <ClInclude Include="src\audio\sound_manager.h" />
     <ClInclude Include="src\basic\drawable.h" />
     <ClInclude Include="src\basic\updatable.h" />
     <ClInclude Include="src\game\character.h" />
     <ClInclude Include="src\game\creature.h" />
-    <ClInclude Include="src\game\inventory\inventory.h" />
-    <ClInclude Include="src\game\inventory\stats.h" />
     <ClInclude Include="src\graphics\batchrenderer2d.h" />
     <ClInclude Include="src\graphics\buffers\buffer.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
+    <ClInclude Include="src\graphics\font.h" />
+    <ClInclude Include="src\graphics\font_manager.h" />
     <ClInclude Include="src\graphics\label.h" />
     <ClInclude Include="src\graphics\layers\group.h" />
     <ClInclude Include="src\graphics\layers\layer.h" />
@@ -221,6 +227,9 @@
     <ClInclude Include="src\physics\collisionable.h" />
     <ClInclude Include="src\physics\foothold.h" />
     <ClInclude Include="src\save\serializer.h" />
+    <ClInclude Include="src\UI\stats.h" />
+    <ClInclude Include="src\UI\ui_manager.h" />
+    <ClInclude Include="src\UI\ui_window.h" />
     <ClInclude Include="src\utils\fileutils.h" />
     <ClInclude Include="src\utils\ImageLoad.h" />
     <ClInclude Include="src\utils\timer.h" />
