--- a/Hiraeth/Hiraeth.vcxproj.filters
+++ b/Hiraeth/Hiraeth.vcxproj.filters
@@ -344,6 +344,9 @@
     <ClInclude Include="src\UI\stats.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\keyboard\mouse_event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.vert" />
