--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -136,9 +136,11 @@
     <ClCompile Include="src\audio\sound.cpp" />
     <ClCompile Include="src\audio\sound_manager.cpp" />
     <ClCompile Include="src\game\character.cpp" />
+    <ClCompile Include="src\game\character_stats.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
     <ClCompile Include="src\game\monster.cpp" />
     <ClCompile Include="src\game\monster_manager.cpp" />
+    <ClCompile Include="src\game\monster_stats.cpp" />
     <ClCompile Include="src\graphics\batchrenderer2d.cpp" />
     <ClCompile Include="src\graphics\buffers\buffer.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
@@ -170,8 +172,8 @@
     <ClCompile Include="src\physics\collisionable.cpp" />
     <ClCompile Include="src\physics\foothold.cpp" />
     <ClCompile Include="src\save\serializer.cpp" />
-    <ClCompile Include="src\UI\stats.cpp" />
     <ClCompile Include="src\UI\ui_manager.cpp" />
+    <ClCompile Include="src\UI\ui_stats.cpp" />
     <ClCompile Include="src\utils\static_timer.cpp" />
     <ClCompile Include="src\utils\timer.cpp" />
     <ClCompile Include="src\view\camera.cpp" />
@@ -192,9 +194,12 @@
     <ClInclude Include="src\basic\drawable.h" />
     <ClInclude Include="src\basic\updatable.h" />
     <ClInclude Include="src\game\character.h" />
+    <ClInclude Include="src\game\character_stats.h" />
     <ClInclude Include="src\game\creature.h" />
     <ClInclude Include="src\game\monster.h" />
     <ClInclude Include="src\game\monster_manager.h" />
+    <ClInclude Include="src\game\monster_stats.h" />
+    <ClInclude Include="src\game\stats.h" />
     <ClInclude Include="src\graphics\batchrenderer2d.h" />
     <ClInclude Include="src\graphics\buffers\buffer.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
@@ -233,8 +238,8 @@
     <ClInclude Include="src\physics\collisionable.h" />
     <ClInclude Include="src\physics\foothold.h" />
     <ClInclude Include="src\save\serializer.h" />
-    <ClInclude Include="src\UI\stats.h" />
     <ClInclude Include="src\UI\ui_manager.h" />
+    <ClInclude Include="src\UI\ui_stats.h" />
     <ClInclude Include="src\UI\ui_window.h" />
     <ClInclude Include="src\utils\fileutils.h" />
     <ClInclude Include="src\utils\ImageLoad.h" />
