--- a/Hiraeth/Hiraeth.vcxproj.filters
+++ b/Hiraeth/Hiraeth.vcxproj.filters
@@ -159,9 +159,6 @@
     <ClCompile Include="src\UI\ui_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\UI\stats.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\utils\static_timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -171,9 +168,6 @@
     <ClCompile Include="src\game\monster_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\UI\stats_ui.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\UI\ui_stats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -181,6 +175,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\game\character_stats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UI\ui_inventory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -362,9 +359,6 @@
     <ClInclude Include="src\UI\ui_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\UI\stats.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\keyboard\mouse_event.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -377,9 +371,6 @@
     <ClInclude Include="src\game\monster_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\UI\stats_ui.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\UI\ui_stats.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -390,6 +381,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\stats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UI\ui_inventory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
