--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\audio\sound.cpp" />
     <ClCompile Include="src\audio\sound_manager.cpp" />
+    <ClCompile Include="src\basic\EventManager.cpp" />
     <ClCompile Include="src\game\character.cpp" />
     <ClCompile Include="src\game\character_stats.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
@@ -152,13 +153,12 @@
     <ClCompile Include="src\graphics\font_manager.cpp" />
     <ClCompile Include="src\graphics\label.cpp" />
     <ClCompile Include="src\graphics\layers\group.cpp" />
-    <ClCompile Include="src\graphics\layers\layer.cpp" />
     <ClCompile Include="src\graphics\layers\tilelayer.cpp" />
     <ClCompile Include="src\graphics\shader.cpp" />
     <ClCompile Include="src\graphics\sprite.cpp" />
-    <ClCompile Include="src\graphics\spritedrenderable.cpp" />
+    <ClCompile Include="src\graphics\sprited_renderable.cpp" />
     <ClCompile Include="src\graphics\texture.cpp" />
-    <ClCompile Include="src\graphics\texturemanager.cpp" />
+    <ClCompile Include="src\graphics\texture_manager.cpp" />
     <ClCompile Include="src\graphics\window.cpp" />
     <ClCompile Include="src\keyboard\key.cpp" />
     <ClCompile Include="src\keyboard\keyboard.cpp" />
@@ -197,6 +197,8 @@
     <ClInclude Include="src\audio\sound.h" />
     <ClInclude Include="src\audio\sound_manager.h" />
     <ClInclude Include="src\basic\drawable.h" />
+    <ClInclude Include="src\basic\EventManager.h" />
+    <ClInclude Include="src\basic\event_handler.h" />
     <ClInclude Include="src\basic\updatable.h" />
     <ClInclude Include="src\game\character.h" />
     <ClInclude Include="src\game\character_stats.h" />
@@ -205,7 +207,8 @@
     <ClInclude Include="src\game\monster_manager.h" />
     <ClInclude Include="src\game\monster_stats.h" />
     <ClInclude Include="src\game\stats.h" />
-    <ClInclude Include="src\graphics\batchrenderer2d.h" />
+    <ClInclude Include="src\game\stats_update_event.h" />
+    <ClInclude Include="src\graphics\renderer.h" />
     <ClInclude Include="src\graphics\buffers\buffer.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
@@ -215,13 +218,12 @@
     <ClInclude Include="src\graphics\layers\group.h" />
     <ClInclude Include="src\graphics\layers\layer.h" />
     <ClInclude Include="src\graphics\layers\tilelayer.h" />
-    <ClInclude Include="src\graphics\renderable2d.h" />
-    <ClInclude Include="src\graphics\renderer2d.h" />
+    <ClInclude Include="src\graphics\renderable.h" />
     <ClInclude Include="src\graphics\shader.h" />
     <ClInclude Include="src\graphics\sprite.h" />
-    <ClInclude Include="src\graphics\spritedrenderable.h" />
+    <ClInclude Include="src\graphics\sprited_renderable.h" />
     <ClInclude Include="src\graphics\texture.h" />
-    <ClInclude Include="src\graphics\texturemanager.h" />
+    <ClInclude Include="src\graphics\texture_manager.h" />
     <ClInclude Include="src\graphics\window.h" />
     <ClInclude Include="src\keyboard\key.h" />
     <ClInclude Include="src\keyboard\keyboard.h" />
