--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -139,13 +139,15 @@
     <ClCompile Include="src\audio\sound.cpp" />
     <ClCompile Include="src\audio\sound_manager.cpp" />
     <ClCompile Include="src\basic\EventManager.cpp" />
+    <ClCompile Include="src\character\character_arm.cpp" />
+    <ClCompile Include="src\character\character_body.cpp" />
     <ClCompile Include="src\game\character.cpp" />
     <ClCompile Include="src\game\character_stats.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
     <ClCompile Include="src\game\monster.cpp" />
     <ClCompile Include="src\game\monster_manager.cpp" />
     <ClCompile Include="src\game\monster_stats.cpp" />
-    <ClCompile Include="src\graphics\batchrenderer2d.cpp" />
+    <ClCompile Include="src\graphics\renderer.cpp" />
     <ClCompile Include="src\graphics\buffers\buffer.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexarray.cpp" />
@@ -200,6 +202,8 @@
     <ClInclude Include="src\basic\EventManager.h" />
     <ClInclude Include="src\basic\event_handler.h" />
     <ClInclude Include="src\basic\updatable.h" />
+    <ClInclude Include="src\character\character_arm.h" />
+    <ClInclude Include="src\character\character_body.h" />
     <ClInclude Include="src\game\character.h" />
     <ClInclude Include="src\game\character_stats.h" />
     <ClInclude Include="src\game\creature.h" />
